// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChatContainer component initializedState when burned renders properly 1`] = `
<Styled(div)
  height="100vh"
  innerRef={[Function]}
  standaloneMode={false}
>
  <Styled(div)
    style={
      Object {
        "background": "#fff",
        "color": "red",
        "fontFamily": "Source Sans Pro",
        "fontWeight": 700,
        "textTransform": "uppercase",
      }
    }
  >
    We're having trouble connecting. Try refreshing the page.
  </Styled(div)>
  <Connect(Debugger) />
  <Styled(div)
    style={
      Object {
        "backgroundColor": "#f4f4f8",
      }
    }
  >
    <Connect(Transcript) />
  </Styled(div)>
</Styled(div)>
`;

exports[`ChatContainer component initializedState when disconnected renders properly 1`] = `
<Styled(div)
  height="100vh"
  innerRef={[Function]}
  standaloneMode={false}
>
  <Styled(div)
    style={
      Object {
        "background": "#fff",
        "color": "red",
        "fontFamily": "Source Sans Pro",
        "fontWeight": 700,
        "textTransform": "uppercase",
      }
    }
  >
    Reconnecting...
  </Styled(div)>
  <Connect(Debugger) />
  <Styled(div)
    style={
      Object {
        "backgroundColor": "#f4f4f8",
      }
    }
  >
    <Connect(Transcript) />
  </Styled(div)>
</Styled(div)>
`;

exports[`ChatContainer component initializedState when errored renders properly 1`] = `
<Styled(div)
  height="100vh"
  innerRef={[Function]}
  standaloneMode={false}
>
  <Styled(div)
    style={
      Object {
        "background": "#fff",
        "color": "red",
        "fontFamily": "Source Sans Pro",
        "fontWeight": 700,
        "textTransform": "uppercase",
      }
    }
  >
    We're having trouble connecting. Try refreshing the page.
  </Styled(div)>
  <Connect(Debugger) />
  <Styled(div)
    style={
      Object {
        "backgroundColor": "#f4f4f8",
      }
    }
  >
    <Connect(Transcript) />
  </Styled(div)>
</Styled(div)>
`;

exports[`ChatContainer component initializedState when inactive renders properly 1`] = `
<Styled(div)
  height="100vh"
  innerRef={[Function]}
  standaloneMode={false}
>
  <Styled(div)
    style={
      Object {
        "background": "#fff",
        "color": "red",
        "fontFamily": "Source Sans Pro",
        "fontWeight": 700,
        "textTransform": "uppercase",
      }
    }
  >
    You have been disconnected due to inactivity. Please refresh the page to reconnect.
  </Styled(div)>
  <Connect(Debugger) />
  <Styled(div)
    style={
      Object {
        "backgroundColor": "#f4f4f8",
      }
    }
  >
    <Connect(Transcript) />
  </Styled(div)>
</Styled(div)>
`;

exports[`ChatContainer component initializedState when initialized renders properly 1`] = `
<Styled(div)
  height="100vh"
  innerRef={[Function]}
  standaloneMode={false}
>
  <Styled(div)
    isMobile={false}
    orientation="portrait"
    style={
      Object {
        "background": "#31bf8b",
        "backgroundColor": "#333",
        "fontFamily": "Source Sans Pro",
        "fontSize": 16,
        "fontWeight": 500,
        "textTransform": "uppercase",
      }
    }
  >
    We're here to help if you have any questions!
  </Styled(div)>
  <Connect(Debugger) />
  <Styled(div)
    style={
      Object {
        "backgroundColor": "#f4f4f8",
      }
    }
  >
    <Styled(Dropzone)
      accept=".mp3"
      disableClick={true}
      disablePreview={true}
      disabled={true}
      haswaitscreen="false"
      id="TranscriptArea"
      innerRef={[Function]}
      maxSize={25000000}
      onDrop={[Function]}
      style={
        Object {
          "minHeight": "0px",
        }
      }
    >
      <Connect(Transcript) />
      <Connect(MessageForm)
        openFileBrowser={[Function]}
      />
    </Styled(Dropzone)>
  </Styled(div)>
</Styled(div)>
`;

exports[`ChatContainer component initializedState when loading renders properly 1`] = `
<Styled(div)
  height="100vh"
  innerRef={[Function]}
  standaloneMode={false}
>
  <Styled(div)
    isMobile={false}
    orientation="portrait"
    style={
      Object {
        "background": "#31bf8b",
        "backgroundColor": "#333",
        "fontFamily": "Source Sans Pro",
        "fontSize": 16,
        "fontWeight": 500,
        "textTransform": "uppercase",
      }
    }
  >
    We're here to help if you have any questions!
  </Styled(div)>
  <Connect(Debugger) />
  <Styled(div)
    style={
      Object {
        "backgroundColor": "#f4f4f8",
      }
    }
  >
    <Connect(Spinner) />
  </Styled(div)>
</Styled(div)>
`;

exports[`ChatContainer component initializedState when uninitialized renders properly 1`] = `
<Styled(div)
  height="100vh"
  innerRef={[Function]}
  standaloneMode={false}
>
  <Styled(div)
    isMobile={false}
    orientation="portrait"
    style={
      Object {
        "background": "#31bf8b",
        "backgroundColor": "#333",
        "fontFamily": "Source Sans Pro",
        "fontSize": 16,
        "fontWeight": 500,
        "textTransform": "uppercase",
      }
    }
  >
    We're here to help if you have any questions!
  </Styled(div)>
  <Connect(Debugger) />
  <Styled(div)
    style={
      Object {
        "backgroundColor": "#f4f4f8",
      }
    }
  >
    <Connect(Spinner) />
  </Styled(div)>
</Styled(div)>
`;

exports[`ChatContainer component welcome form when welcome form has not been submitted renders welcome form 1`] = `
<Styled(div)
  height="100vh"
  innerRef={[Function]}
  standaloneMode={false}
>
  <Connect(WelcomeForm) />
</Styled(div)>
`;

exports[`ChatContainer component when chatContainerHidden is true returns null 1`] = `""`;
